assets/css/style.css
/* color palette */
:root {
  --color-primary: #EDFFEC;
  --color-secondary: #7C6A0A;
  --color-accent: #FA9500;
  --color-headings: #EB6424;
  --color-text: #482bbd;
  --color-text-secondary: #000;
  --color-button: #EB6424;
  --color-button-text: #fff;
  --color-button-selected: #2980B9;
}

html {
  /* (62.5% of 16px) == 10px == 1rem */
  font-size: 62.5%;
}

/* default font, color, size, alignment */
body {
  font-family: Inter, Arial, Helvetica, sans-serif;
  font-size: 1.6rem;
  line-height: 1.5;
  color: var(--color-text);
  text-align: center;
}

h1,
h2,
h3 {
  color: var(--color-headings);
  margin-top: 1rem;
}

h1 {
  font-size: 2.8rem;
  margin-top: -1rem;
  padding-top: 6.5rem;
}

h2 {
  font-size: 2.4rem;
  text-transform: capitalize;
  font-variant: small-caps;
}

h3 {
  font-size: 1.8rem;
  letter-spacing: 0.1rem;
  font-style: italic;
  text-decoration: underline;
  text-decoration-style: double;
}

p {
  margin: 2rem;
  padding: 1rem;
  color: var(--color-text);
}

/* >>> start nav bar */
/* makes navbar element stick and positions it */
.nav--bar {
  position: -webkit-sticky;
  position: sticky;
  top: 1px;
  z-index: 10;
  width: 90%;
  margin-left: 5%;
}

/* remove bullets from list elements in nav bar */
.nav--bar ul {
  list-style: none;
}

/* removes the "hamburger" menu", click event showHamburger triggers JavaScript "dropdown_menu"
to show menu, its position is define in this css rule-set */
.hamburger_menu {
  display: none;
  position: absolute;
  top: 5rem;
  right: 1rem;
  overflow: auto;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
  padding: 1rem;
}

/* JavaScript => dropdown_menu, toggles between hiding and showing the "hamburger" menu,
rules which are defined hire will be applied to the hamburger_menu rule set when
click event showHamburger is triggered */
.show {
  display: flex;
  flex-direction: column;
}

/* home button to flow left on mobile first, background image can show behind,
button is removed on wider view (.hide-desktop)*/
.float-left--mobile-first {
  float: left;
}

/* float right, background image can show behind */
.float-right {
  float: right;
  margin-right: 1rem;
}

/* <<< end nav bar */

/* 1st value is logo, 2nd value is background, if values not separated by "," than they apply to both*/
.header-page {
  background-color: #fff;
  background-image: url(/assets/images/icons/weekend-breaker_logo_icon.png), url(/assets/images/frank-mckenna-eXHeq48Z-Q4-unsplash.webp);
  background-position: center top 2rem, center;
  background-size: 6rem, cover;
  background-repeat: no-repeat;
}

/* styles the sections of the page */
.section {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  max-width: 90%;
  margin: auto;
  margin-top: 1rem;
  padding: 1rem;
  text-align: center;
}

/* >>> start product card */
#action_pack {
  background: rgb(237, 255, 236);
  background: linear-gradient(152deg, rgba(237, 255, 236, 1) 0%, rgba(250, 149, 0, 1) 89%, rgba(235, 100, 36, 1) 100%);
}

#relax_pack {
  background: rgb(237, 255, 236);
  background: linear-gradient(190deg, rgba(237, 255, 236, 1) 0%, rgba(250, 149, 0, 1) 89%, rgba(235, 100, 36, 1) 100%);
}

#discover_pack {
  background: rgb(237, 255, 236);
  background: linear-gradient(63deg, rgba(237, 255, 236, 1) 0%, rgba(250, 149, 0, 1) 89%, rgba(235, 100, 36, 1) 100%);
}

/* aligns (centers) the image of the product caed */
.product-card__img img {
  width: 95%;
  margin: auto;
}

/* styles the "slogan" for the product card images, no <figcaption> because the slogan does not describe the image */
.product-card__img-text {
  background-color: #fff;
  color: black;
  font-family: cursive, Arial, Helvetica, sans-serif;
  width: 95%;
  margin: auto;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #fff;
  font-size: 1.2rem;
  padding: 1rem;
  margin-left: 2.5%;
  position: absolute;
  top: 0;
}

/* >>> start text animation */
/* animation which changes the text color of the number in the product card picture from white to black */
.text-color-change {
  -webkit-animation-name: text-color-change;
  -webkit-animation-duration: 10s;
  animation-name: text-color-change;
  animation-duration: 10s;
}

@-webkit-keyframes text-color-change {
  from {
    color: #fff;
  }

  to {
    color: #000;
  }
}

@keyframes text-color-change {
  from {
    color: #fff;
  }

  to {
    color: #000;
  }
}

/* <<< end text animation */

/* removes slides which will be displayed later (10seconds) through JavaScript 'shopping_gallery' */
.mySlidesAction,
.mySlidesRelax,
.mySlidesDiscover {
  position: relative;
}

/* <<< end card */

/* >>> start Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 10s;
  animation-name: fade;
  animation-duration: 10s;
}

@-webkit-keyframes fade {
  from {
    opacity: .6
  }

  to {
    opacity: 1
  }
}

@keyframes fade {
  from {
    opacity: .6
  }

  to {
    opacity: 1
  }
}

/* arranges buttons in the product card */
.product-card-button {
  display: flex;
  flex-direction: column;
}

/* <<< end  Fading animation */

/* >>> start button and menu*/
.button {
  position: relative;
  background: rgb(237, 255, 236);
  background: radial-gradient(circle, rgba(237, 255, 236, 1) 0%, rgba(250, 149, 0, 1) 0%, rgba(235, 100, 36, 1) 54%);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  border: none;
  font-size: 2rem;
  color: var(--color-primary);
  padding: 1rem;
  margin: 1rem 0;
  width: 15rem;
  text-align: center;
  border-radius: 20px;
  text-decoration: none;
  overflow: hidden;
  cursor: pointer;
}

/* small button size for mobile first */
.button--mobile {
  width: 6rem;
}

/* button hidden on mobile first */
.button--show-desktop {
  display: none;
}

/* feedback to user that the element is a button
because it changes color when hovered and pressed */
.button:hover,
.button:focus {
  background: var(--color-button-selected);
}

/* feedback to user that the element is a link
because it changes color when hovered*/
footer i:hover {
  color: var(--color-button-selected);
}

/* <<< end button and menu */

/* style heading for summary*/
summary h2,
summary h3 {
  display: inline-block;
}

/* >>> start user rating testimonies */

/* gives color to positive user rated star */
.checked {
  color: orange;
}

/* groups user image with user name, occupation and rating together */
.user header {
  width: 90%;
  margin-left: 5%;
  display: flex;
  justify-content: space-evenly;
}

/* defines the same size for all user images */
.user img {
  display: inline-block;
  border-radius: 50%;
  width: 6rem;
  height: 6rem;
  margin: 1rem 1rem;
}

/* name of the user */
.user h3 {
  margin-bottom: 0.1rem;
  font-size: 1.8rem;
}

/* user occupation */
.user figcaption+p {
  font-size: 1rem;
  margin: 0;
  padding: 0.5rem;
}

/* user quote */
.user blockquote {
  font-style: italic;
  font-size: 1.3rem;
  margin: 1rem 12% 1rem 12%;
  height: 14.5rem;
}

/* <<< end user rating testimonies */

/* styles faq text */
.faq p {
  font-style: italic;
}

/* >>> start about us */

/* defines the size of the owners profile picture */
.profile_me {
  height: 10rem;
  width: auto;
  border-radius: 50%;
  float: left;
  margin: 1rem;
  margin-left: 2rem;
}

/* clears the float after the p element */
.about_us p:after {
  content: "";
  clear: both;
  display: table;
}

/* emphasizes the slogan */
.about_us em {
  font-weight: bolder;
}

/* profile picture of the team */
.profile_team {
  margin: 1rem;
  margin-left: 2rem;
  border-radius: 10%;
  float: left;
}

/* <<< end about us */

/* >>> start contact us */
.contact>li {
  font-weight: bolder;
  font-size: 2.2rem;
  list-style-type: none;
}

/* styles list items for contact */
.contact>li>ul>li {
  font-style: italic;
  font-weight: normal;
  font-size: 1.4rem;
  list-style-type: none;
}

/* map for contact us  */
#map {
  height: 20rem;
  width: 90%;
  margin: auto;
}

/* >>> end contact us */

/* >>> start social media */
.socialmedia {
  font-size: 6rem;
  display: flex;
  justify-content: space-evenly;
}

/* color for social media icons */
.socialmedia i {
  color: var(--color-headings);
}

/* <<< end social media links */

/* copy right */
.copy {
  font-size: 1rem;
}

/* >>> start footer */
footer {
  background-color: white;
  background-image: url(/assets/images/frank-mckenna-eXHeq48Z-Q4-unsplash.webp);
  background-size: cover;
  margin: 1rem 0 0 0;
}

footer p {
  margin-bottom: 0;
}

/* <<< end footer */

/* <<< end social media links */

/* media queries do not take font size from the html element,
16px == 1em and not 62.5% == 10px == 1em */
/* at 400px == font size standard 16px == 25em */
@media screen and (min-width: 25em) {

  /* testimony, group user image with name, occupation tighter together */
  .user header {
    width: 60%;
    margin-left: 20%;
  }
}

/* media queries do not take font size from the html element,
16px == 1em and not 62.5% == 10px == 1em */
/* at 600px == font size standard 16px == 37.5em */
@media screen and (min-width: 37.5em) {
  body {
    font-size: 1.8rem;
  }

  h1 {
    font-size: 8rem;
  }

  /* h2 {
    font-size: 4rem;
  } */

  h3 {
    font-size: 2.4rem;
  }

  /* hide element when screen expanse */
  .hide-desktop {
    display: none;
  }

  /* shows element when screen expanse */
  .button--show-desktop {
    display: inline-block;
  }

  /* changes nav bar elements to inline-block, they are not inside the hamburger any more */
  .hamburger_menu {
    /* is needed otherwise elements do not appear */
    display: inline-block;
    /* is needed otherwise background dose not float behind navbar */
    float: left;
    position: static;
    top: 5rem;
    overflow: auto;
    z-index: 1;
    list-style: none;
    box-shadow: none;
    background-color: transparent;
    width: 100%;
    margin: 1rem 0;
  }

  .hamburger_menu li {
    display: inline-block;

  }

  .hamburger_menu .button {
    width: auto;
    font-size: 1.3rem;
    margin: auto;
  }

  .float-left {
    float: left;
    margin-left: 1rem;
  }

  /* spaces cards horizontal even */
  .product-card {
    display: flex;
    justify-content: space-evenly;
  }

  /* spaces card elements vertical even */
  #action_pack {
    width: 30%;
    min-width: 16.2rem;
    display: inline-block;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  /* spaces card elements vertical even */
  #relax_pack {
    width: 30%;
    min-width: 16.2rem;
    display: inline-block;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  /* spaces card elements vertical even */
  #discover_pack {
    width: 30%;
    min-width: 16.2rem;
    display: inline-block;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  /* testimony, group user image with name, occupation tighter together */
  .user header {
    width: 40%;
    margin-left: 30%;
  }
}

/* media queries do not take font size from the html element,
16px == 1em and not 62.5% == 10px == 1em */
/* breakpoint for desktop 3 column at 720px == font size standard 16px == 45em */
@media screen and (min-width: 45em) {

  .hamburger_menu {
    width: 90%;
    margin-left: 5%;
  }

  .hamburger_menu .button {
    font-size: 1.6rem;
  }
}

/* media queries do not take font size from the html element,
16px == 1em and not 62.5% == 10px == 1em */
/* at 1020px == font size standard 16px == 63.75em */
@media screen and (min-width: 63.75em) {
  body {
    font-size: 1.8rem;
  }

  h1 {
    font-size: 8rem;
  }

  h2 {
    font-size: 3.8rem;
  }

  h3 {
    font-size: 2.4rem;
  }
}

